--- a/Views/Personal/EditInfo.cshtml
+++ b/Views/Personal/EditInfo.cshtml
@@ -15,7 +15,7 @@
     <script src="~/js/md5.js"></script>
     <link href="~/css/myStyle.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:#f2f2f3;">
     <nav class="navbar navbar-default navbar-fixed-top" style="background-color:rgba(255, 255, 255, 0.95);z-index:1000;">
         <div class="container" id="div_header_container">
             <div class="navbar-header">
@@ -102,8 +102,8 @@
     </nav>
 
 
-    <div class="container" style="margin-top:66px;">
-        <div class="main_div" style="width:80%;margin:0 auto 0 auto; background-color:rgba(255, 255, 255, 0.95);min-height:901px;position:relative;">
+    <div class="container" style="margin-top:76px;">
+        <div class="main_div" style="width:80%;margin:0 auto 0 auto; background-color:rgba(255, 255, 255, 0.95);min-height:888px;position:relative;">
             <div class="divLeftNav">
                 <div class="left-nav-header">个人中心</div>
                 <div class="left-nav-item ">
