--- a/wwwroot/css/myStyle.css
+++ b/wwwroot/css/myStyle.css
@@ -564,7 +564,7 @@ input:-webkit-autofill {
     position: relative;
     padding-top: 40px;
     padding-left: 40px;
-    position:relative;
+    position: relative;
 }
 
 .div_set_header {
@@ -827,6 +827,20 @@ input:-webkit-autofill {
     transition: all .3s ease-out;
 }
 
+@keyframes ScaleBigtoSmall {
+    0% {
+        transform: scale(0.8);
+    }
+
+
+    20% {
+        transform: scale(1.10);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
 
 .padnel_head_right_top {
     visibility: hidden;
@@ -834,25 +848,29 @@ input:-webkit-autofill {
     margin-left: -200px;
     background-color: rgb(255,255,255);
     width: 300px;
-    height: 350px;
+    padding-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 3px 8px 2px rgba(1,1,1,.2);
     border-top: 2px solid #f80;
-    transition: all ease-in 0.1s;
+    transform-origin: center top;
+    transition: all ease-in-out 0.3s;
+    /*transform: rotate(180deg);*/
     opacity: 0;
 }
 
 ._group_user:hover + .padnel_head_right_top {
-    transform: scale(1);
+    /*animation: ScaleBigtoSmall 0.30s linear 1;
+    animation-play-state: running;*/
     visibility: visible;
     opacity: 1;
     /*display: block;*/
 }
 
 .padnel_head_right_top:hover {
+    /*animation-play-state: running;*/
     opacity: 1;
     visibility: visible;
-    transform: scale(1);
+    /*transform: scale(1);*/
     /*display: block;*/
 }
 
@@ -1093,10 +1111,10 @@ input:-webkit-autofill {
         cursor: pointer;
     }
 
-    .div_task_list_item .div_task_list_item_progress_complete:hover {
-        background-color:#15b035;
-        color:#fff;
-    }
+        .div_task_list_item .div_task_list_item_progress_complete:hover {
+            background-color: #15b035;
+            color: #fff;
+        }
 
     .div_task_list_item .div_task_list_item_progress_received {
         float: right;
@@ -1105,7 +1123,7 @@ input:-webkit-autofill {
         line-height: 20px;
         margin-top: 1px;
         width: 40px;
-        text-align:center;
+        text-align: center;
     }
 
     .div_task_list_item .div_task_list_item_discribe {
@@ -1114,4 +1132,28 @@ input:-webkit-autofill {
 
     .div_task_list_item .div_task_list_item_exp {
         color: #20bf28;
+    }
+
+
+.div_account_manager_list {
+    margin-top: 20px;
+}
+
+.div_account_manager_item {
+    float: left;
+    width: 35%;
+    height: 60px;
+    border: 1px solid #cecece;
+    border-radius: 5px;
+    margin-right: 6%;
+    text-align: center;
+    line-height: 60px;
+    cursor: pointer;
+    background-color: #fafafc;
+    font-size:12px;
+    font-weight:600;
+}
+
+    .div_account_manager_item:hover {
+        border-color: #f80;
     }
